--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header><h1>A Journey Toward Allah 🌙</h1></header>
-<nav>
+<nav>  <p>Follow me on Instagram: <a href="https://instagram.com/Islamic._._dill" target="_blank">@Islamic._._dill</a></p>
 <a href="index.html">Home</a>
 <a href="hadith.html">Hadith of the Day</a>
 <a href="verse.html">Verse of the Day</a>
