--- a/index.html
+++ b/index.html
@@ -6,109 +6,63 @@
   <title>Islamic._._dill — Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <div class="app-shell">
-
-    <!-- HEADER -->
     <header>
       <div class="title">Islamic._._dill</div>
     </header>
 
-    <!-- MAIN CONTENT -->
     <main class="container">
-
-      <!-- INSTAGRAM POSTS -->
       <section id="instagram-posts">
         <h2>Instagram Posts</h2>
-        <div class="posts">
-
-          <!-- POST 1 -->
-          <a href="https://www.instagram.com/p/DR_9PHzk0Os/" target="_blank">
-            <img
-              src="https://raw.githubusercontent.com/bazlast45-coder/Islamic-website/main/post1.jpg"
-              onerror="this.src='https://via.placeholder.com/300x300/8fbf9e/ffffff?text=Post';"
-              alt="Instagram Post"
-            >
+        <div class="posts" aria-live="polite">
+          <!-- Embedded SVG thumbnails so posts always show without uploading images -->
+          <a href="https://www.instagram.com/p/DR_9PHzk0Os/" target="_blank" rel="noopener">
+            <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='640' height='640'><defs><linearGradient id='g' x1='0' x2='1'><stop offset='0' stop-color='%238fbf9e'/><stop offset='1' stop-color='%23668b6f'/></linearGradient></defs><rect width='100%25' height='100%25' fill='url(%23g)' rx='18' ry='18'/><text x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='28' fill='white'>Post</text></svg>" alt="Post 1">
           </a>
 
-          <!-- REEL 1 -->
-          <a href="https://www.instagram.com/reel/DSACgkgE08o/" target="_blank">
-            <img
-              src="https://raw.githubusercontent.com/bazlast45-coder/Islamic-website/main/post2.jpg"
-              onerror="this.src='https://via.placeholder.com/300x300/0a2238/bcd4ff?text=Reel';"
-              alt="Instagram Reel"
-            >
+          <a href="https://www.instagram.com/reel/DSACgkgE08o/" target="_blank" rel="noopener">
+            <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='640' height='640'><rect width='100%25' height='100%25' fill='%230a2238' rx='18' ry='18'/><text x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='28' fill='%23bcd4ff'>Reel</text></svg>" alt="Reel 1">
           </a>
 
-          <!-- REEL 2 -->
-          <a href="https://www.instagram.com/reel/DSADchnE6hv/" target="_blank">
-            <img
-              src="https://raw.githubusercontent.com/bazlast45-coder/Islamic-website/main/post3.jpg"
-              onerror="this.src='https://via.placeholder.com/300x300/f2e9e0/666?text=Reel';"
-              alt="Instagram Reel"
-            >
+          <a href="https://www.instagram.com/reel/DSADchnE6hv/" target="_blank" rel="noopener">
+            <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='640' height='640'><rect width='100%25' height='100%25' fill='%23f2e9e0' rx='18' ry='18'/><text x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='28' fill='%23666'>Reel</text></svg>" alt="Reel 2">
           </a>
-
         </div>
       </section>
 
-      <!-- HADITH OF THE DAY -->
       <section id="daily-hadith">
         <h2>Hadith of the Day</h2>
         <div class="card">
-          <div id="hadith-display">Loading...</div>
+          <div id="hadith-display" class="trans">Loading...</div>
           <div id="hadith-ref" class="meta small"></div>
         </div>
       </section>
 
-      <!-- VERSE OF THE DAY -->
       <section id="daily-verse">
         <h2>Verse of the Day</h2>
         <div class="card">
-          <div id="verse-display">Loading...</div>
+          <div id="verse-display" class="trans">Loading...</div>
           <div id="verse-ref" class="meta small"></div>
         </div>
       </section>
-
     </main>
 
-    <!-- BOTTOM NAVIGATION (INSTAGRAM STYLE) -->
-    <nav class="bottom-nav">
-      <a href="index.html" class="active">
-        <span class="icon">🏠</span>
-        <span>Home</span>
-      </a>
-
-      <a href="hadiths.html">
-        <span class="icon">📖</span>
-        <span>Hadith</span>
-      </a>
-
-      <a href="verses.html">
-        <span class="icon">🕋</span>
-        <span>Verse</span>
-      </a>
-
-      <a href="challenge.html">
-        <span class="icon">🎯</span>
-        <span>Challenge</span>
-      </a>
-
-      <a href="about.html">
-        <span class="icon">ℹ️</span>
-        <span>About</span>
-      </a>
+    <nav class="bottom-nav" role="navigation" aria-label="main">
+      <a href="index.html" class="active" aria-label="Home"><span class="icon">🏠</span><span>Home</span></a>
+      <a href="hadiths.html" aria-label="Hadith"><span class="icon">📖</span><span>Hadith</span></a>
+      <a href="verses.html" aria-label="Verse"><span class="icon">🕋</span><span>Verse</span></a>
+      <a href="challenge.html" aria-label="Challenge"><span class="icon">🎯</span><span>Challenge</span></a>
+      <a href="about.html" aria-label="About"><span class="icon">ℹ️</span><span>About</span></a>
     </nav>
 
-    <!-- MODAL (POPUP FOR DETAILS) -->
     <div id="modal-bg" class="modal-bg" onclick="closeModal(event)">
-      <div class="modal" onclick="event.stopPropagation()">
-        <div class="modal-header">
-          <div class="modal-title">Details</div>
+      <div class="modal" role="dialog" aria-modal="true" onClick="event.stopPropagation()">
+        <div style="display:flex;justify-content:space-between;align-items:center;">
+          <div style="font-weight:700">Details</div>
           <button class="close-btn" onclick="closeModal()">✕</button>
         </div>
-        <div id="modal-content"></div>
+        <div id="modal-content" style="margin-top:10px"></div>
       </div>
     </div>
 
@@ -116,4 +70,4 @@
 
   <script src="script.js"></script>
 </body>
-              </html>
+        </html>
