--- a/about.html
+++ b/about.html
@@ -9,10 +9,18 @@
 <body>
   <div class="app-shell">
     <header><div class="title">About</div></header>
+
     <main class="container">
       <div class="card">
         <p class="trans">This site shares daily hadiths, Qur'anic reminders and a 365-day good-deeds challenge to help increase knowledge and righteous action. Follow on Instagram: <a href="https://instagram.com/Islamic._._dill" target="_blank">@Islamic._._dill</a></p>
       </div>
+
+      <!-- beautiful Arabic quote block under About -->
+      <div id="about-quote" class="card" style="margin-top:18px;text-align:center;">
+        <div style="font-family: 'Noto Naskh Arabic', serif; font-size:20px; color: #fff; line-height:1.4;">اللّٰهُمَّ اجْعَلْنَا مِنَ التَّوَّابِينَ</div>
+        <div class="meta small" style="margin-top:8px;color:var(--muted);">“O Allah, make us among those who constantly repent.”</div>
+      </div>
+
     </main>
 
     <nav class="bottom-nav">
